# Flights-Project-Advanced-Programming-2024

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.pip  showcase_notebook.ipynb
docs/: conf.py
docs/_build/doctrees/: distances.doctree  environment.pickle  featherflight.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  distances.html  featherflight.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: featherflight.rst.txt  index.rst.txt  modules.rst.txt
prototypes/: adapted_fifth.ipynb  explo.ipynb  interactive_plot.html  interactive_plot.ipynb
scripts/: distances.py  featherflight.py
tests/: test_distances.py  test_flights_countries.py
